Follow-up on the "Targeted MS Guest Access" login toggle.
- Gate ShowCalibrationCurveAction (the single-curve page bots hit), not the
  ShowCalibrationCurvesAction list. It gates in validate() to skip building the
  curve, and addNavTrail always adds a crumb so the login-gate path has a title.
- RestrictableAction is now keyed by action class: actions gate via getClass()
  (forClass lookup), and the settings-page label comes from the registered action
  name, so a renamed action keeps working. Stored keys (enum name()) are unchanged.
- TargetedMSGuestAccessTest sets the master switch off explicitly in step 1, and
  restores the site-wide settings in @After so it runs under clean=false.

Co-Authored-By: Claude <noreply@anthropic.com>